test/sema/typeck/var/var-wrong-type-bool-int.dora
fn f() { let b : Bool = 2i32; }
